--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,8 @@
 # Welcome to Jekyll!
 # 
-
+# This config file is meant for settings that affect your whole blog.
+#
 
 title: Edit_config.yml to set your title 
 description: This is where
 github_username: lyeve
-
-
-
-
-
-
-
