--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,6 @@
 # This config file is meant for settings that affect your whole blog.
 #
 
-title: Edit_config.yml to set your title 
+title: Lyeve's bog
 description: This is where
 github_username: lyeve
